chore: fix the sidebar position z-index

--- a/obfx_modules/mystock-import/css/editor-style.css
+++ b/obfx_modules/mystock-import/css/editor-style.css
@@ -408,6 +408,6 @@
     padding: 10px 0;
 }
 
-.components-editor-notices__snackbar{
-    z-index: 0;
+.is-sidebar-opened .block-editor-editor-skeleton__sidebar{
+    z-index: 100001;
 }
